<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".Login.LoginEmailActivity"
    android:background="@color/fondo">


    <!-- Imagen superior -->
    <ImageView
        android:src="@drawable/login_usuario"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp" />

    <!-- tEXT: INICIO DE SESION -->
    <TextView
        android:text="@string/txt_login"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- bIENVENIDO -->
    <TextView
        android:text="BIENVENIDO"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@drawable/bienvenido_fondo"
        android:padding="12dp" />


    <!--INPUT : Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        >

        <EditText
            android:id="@+id/et_Email"
            android:hint="@string/et_Email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardatos"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <!--INPUT: Contraseña-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:boxBackgroundMode="none">

        <EditText
            android:id="@+id/et_Password"
            android:hint="@string/et_Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cardatos"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- TEXTOS -->
    <TextView
        android:text="@string/txt_no_tienes_cuenta"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_registrarme"
        android:text="@string/tv_registrarme"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- BTN: INGRESAR -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Ingresar"
        android:text="@string/btn_Ingresar"
        android:textAllCaps="true"
        android:layout_marginTop="15dp"
        app:cornerRadius="8dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fondo_btn"/>

</androidx.appcompat.widget.LinearLayoutCompat>