<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Login.RegistroEmailActivity"
    android:background="@color/fondo">

    <!-- Título -->
    <TextView
        android:text="CREA TU CUENTA"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Imagen ilustrativa -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/registro_usuario" />

    <!-- Subtítulo -->
    <TextView
        android:text="INGRESA TUS DATOS"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- iNPUT: Nombres-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none">

        <EditText
            android:id="@+id/et_Nombres"
            android:hint="@string/et_Nombres"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardatos"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- INPUT :Correo-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none">

        <EditText
            android:id="@+id/et_Email"
            android:hint="@string/et_Email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardatos"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- input: Contraseña-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_Password"
            android:hint="@string/et_Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardatos"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- INput : Repetir la contraseña-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_R_Password"
            android:hint="@string/et_R_Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardatos"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón registrar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Registrar"
        android:text="CREAR CUENTA"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/fondo_btn"
        app:cornerRadius="8dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@android:color/white" />


</androidx.appcompat.widget.LinearLayoutCompat>